@@ -1,3 +1,9 @@
+2019-03-30  Karl Berry  <karl@freefriends.org>
+
+	* emspecial.c (bmpgraph): avoid writing after isblack
+	if clrtablesize is >256.
+	Report from Andy Nguyen of ETH Zurich.
+
 2019-03-29  Karl Berry  <karl@freefriends.org>
 
 	* loadfont.c (errbuf),
